# advent-of-code-2024

./: README.md  advent-of-code2024.cabal
src/: Day1.hs  Day2.hs  Lib.hs
