cabal-version:      3.0
name:               advent-of-code2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Penny Chase
maintainer:         mpchase@mac.com
-- copyright:
category:           Advent of Code
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib, Day1
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      multiset,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-of-code2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        advent-of-code2024

    hs-source-dirs:   app
    default-language: Haskell2010
